--- a/250620/网安学习大纲-250620-01.md
+++ b/250620/网安学习大纲-250620-01.md
@@ -161,3 +161,25 @@
         ├── CTF-web安全介绍与实践
         └── CTF-web安全实战
 ```
+
+
+```markdown
+网安高级 (Advanced Cybersecurity)
+├── windows权限提升 (Windows Privilege Escalation)
+│   ├── WIN-本地用户AT&SC&PS命令历史漏洞讲解 (WIN - Local User AT&SC&PS Command History Vulnerability Explanation)
+│   ├── MSF提权 (MSF Privilege Escalation)
+│   ├── CS插件提权 (CS Plugin Privilege Escalation)
+│   ├── UACME工具提权 (UACME Tool Privilege Escalation)
+│   ├── MS09-012巴西烤肉提权 (MS09-012 Brazilian BBQ Privilege Escalation)
+│   └── 土豆全家桶提权 (Potato Family Privilege Escalation)
+├── 红蓝工具介绍及使用 (Introduction and Use of Red/Blue Team Tools)
+│   ├── 内网常用工具mimikatz、fscan、Kekeo等介绍与使用 (Introduction and Use of Common Intranet Tools like mimikatz, fscan, Kekeo)
+│   ├── Suricata蓝队流量监控与检测工具 (Suricata Blue Team Traffic Monitoring and Detection Tool)
+│   ├── Vshell介绍部署与使用 (Vshell Introduction, Deployment, and Use)
+│   ├── AWVS介绍部署与使用 (AWVS Introduction, Deployment, and Use)
+│   ├── MSF使用与介绍--meterpreter使用与介绍 (MSF Use and Introduction -- meterpreter Use and Introduction)
+│   └── Cobalt Strike安装使用以及插件利用 (Cobalt Strike Installation, Use, and Plugin Utilization)
+├── linux权限提升 (Linux Privilege Escalation)
+│   └── Linux内核漏洞本地用户提权 (Linux Kernel Vulnerability Local User Privilege Escalation)
+└── 免杀 (AV Evasion)
+```
