--- a/250620/网安学习大纲-250620-01.md
+++ b/250620/网安学习大纲-250620-01.md
@@ -183,3 +183,48 @@
 │   └── Linux内核漏洞本地用户提权 (Linux Kernel Vulnerability Local User Privilege Escalation)
 └── 免杀 (AV Evasion)
 ```
+
+<br>
+
+### 高级网安 02
+
+```markdown
+网安高级 (Advanced Cybersecurity)
+├── windows权限提升 (Windows Privilege Escalation)
+│   ├── WIN-本地用户AT&SC&PS命令历史漏洞讲解 (WIN - Local User AT&SC&PS Command History Vulnerability Explanation)
+│   ├── MSF提权 (MSF Privilege Escalation)
+│   ├── CS插件提权 (CS Plugin Privilege Escalation)
+│   ├── UACME工具提权 (UACME Tool Privilege Escalation)
+│   ├── MS09-012巴西烤肉提权 (MS09-012 Brazilian BBQ Privilege Escalation)
+│   └── 土豆全家桶提权 (Potato Family Privilege Escalation)
+├── 红蓝工具介绍及使用 (Introduction and Use of Red/Blue Team Tools)
+│   ├── 内网常用工具mimikatz、fscan、Kekeo等介绍与使用 (Introduction and Use of Common Intranet Tools like mimikatz, fscan, Kekeo)
+│   ├── Suricata蓝队流量监控与检测工具 (Suricata Blue Team Traffic Monitoring and Detection Tool)
+│   ├── Vshell介绍部署与使用 (Vshell Introduction, Deployment, and Use)
+│   ├── AWVS介绍部署与使用 (AWVS Introduction, Deployment, and Use)
+│   ├── MSF使用与介绍--meterpreter使用与介绍 (MSF Use and Introduction -- meterpreter Use and Introduction)
+│   └── Cobalt Strike安装使用以及插件利用 (Cobalt Strike Installation, Use, and Plugin Utilization)
+├── 免杀 (AV Evasion)
+│   ├── 初始免杀、资源修改、程序加壳 (Initial Evasion, Resource Modification, Packing)
+│   ├── -shellcode加密 (-shellcode Encryption)
+│   ├── 免杀工具使用 (Use of AV Evasion Tools)
+│   ├── Powershell过免杀 (Powershell AV Evasion)
+│   ├── 内存免杀-文本提权shell (In-Memory Evasion - Text-based Privilege Escalation Shell)
+│   ├── 内存免杀-加载器获取shellco (In-Memory Evasion - Loader-based Shellcode Acquisition)
+│   ├── 内存免杀-远程协议加载shellcode (In-Memory Evasion - Remote Protocol Shellcode Loading)
+│   ├── 内存免杀-管道获取shellcode (In-Memory Evasion - Pipe-based Shellcode Acquisition)
+│   ├── 图片隐写获取shellcode (In-Memory Evasion - Steganography-based Shellcode Acquisition)
+│   └── 内网高级 (Advanced Intranet)
+├── linux权限提升 (Linux Privilege Escalation)
+│   ├── Linux内核漏洞本地用户提权 (Linux Kernel Vulnerability Local User Privilege Escalation)
+│   ├── 脏管提权 CVE-2022-0847 (Dirty Pipe Privilege Escalation)
+│   ├── 脏牛提权 CVE-2016-5195 (Dirty COW Privilege Escalation)
+│   ├── Linux定时任务提权 (Linux Cron Job Privilege Escalation)
+│   └── Linux环境变量提权漏洞 (Linux Environment Variable Privilege Escalation Vulnerability)
+├── 内网基础 (Intranet Basics)
+│   ├── 内网信息收集-工具收集 (Intranet Information Gathering - Tool-based)
+│   └── 内网信息收集-手动收集 (Intranet Information Gathering - Manual)
+└── Windows认证 (Windows Authentication)
+    ├── Kerbors认证 (Kerberos Authentication)
+    └── 网络认证 (Network Authentication)
+```
